--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,7 @@
 </head>
 
 <body>
-  <script src="./../src/index.js"></script>
-  <div id="root"></div>
+  <div id="root">... loading ...</div>
 </body>
 
 </html>
