--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
   <link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
   <link rel="icon" href="./favicon.ico">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="./manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="./ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <meta name="Task Board" content="A simple task board app" />
   <title>Task Board</title>
